--- a/src/app/@theme/assets/scss/theme.scss
+++ b/src/app/@theme/assets/scss/theme.scss
@@ -4,10 +4,11 @@ Convention for CSS ordering is done using https://csscomb.herokuapp.com/online
 ----------------------------------------
 */
 
+@import "./theme-accordion.scss";
 @import "./theme-alert.scss";
 @import "./theme-table.scss";
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;0,700;0,900;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500');
 
 * {
   margin: 0;
@@ -55,8 +56,4 @@ h5 {
 
 h6 {
   font-size: 14px;
-}
-
-.icon-only {
-  margin-right: 0 !important;
 }
