--- a/src/app/pages/@theme/alerts/alerts.component.html
+++ b/src/app/pages/@theme/alerts/alerts.component.html
@@ -13,25 +13,25 @@
         <card-body>
           <div class="row">
             <div class="col-xl-6">
-              <button class="btn btn-primary col-xl-12" (click)="openAlertTitleSuccess()">
+              <button class="btn btn-success col-xl-12" (click)="openAlertTitleSuccess()">
                 Success
               </button>
             </div>
 
             <div class="col-xl-6">
-              <button class="btn btn-primary col-xl-12" (click)="openAlertTitleError()">
+              <button class="btn btn-danger col-xl-12" (click)="openAlertTitleError()">
                 Error
               </button>
             </div>
 
             <div class="col-xl-6">
-              <button class="btn btn-primary col-xl-12" (click)="openAlertTitleWarning()">
+              <button class="btn btn-warning col-xl-12" (click)="openAlertTitleWarning()">
                 Warning
               </button>
             </div>
 
             <div class="col-xl-6">
-              <button class="btn btn-primary col-xl-12" (click)="openAlertTitleInfo()">
+              <button class="btn btn-info col-xl-12" (click)="openAlertTitleInfo()">
                 Info
               </button>
             </div>
@@ -51,25 +51,25 @@
         <card-body>
           <div class="row">
             <div class="col-xl-6">
-              <button class="btn btn-primary col-xl-12" (click)="openAlertDescriptionSuccess()">
+              <button class="btn btn-success col-xl-12" (click)="openAlertDescriptionSuccess()">
                 Success
               </button>
             </div>
 
             <div class="col-xl-6">
-              <button class="btn btn-primary col-xl-12" (click)="openAlertDescriptionError()">
+              <button class="btn btn-danger col-xl-12" (click)="openAlertDescriptionError()">
                 Error
               </button>
             </div>
 
             <div class="col-xl-6">
-              <button class="btn btn-primary col-xl-12" (click)="openAlertDescriptionWarning()">
+              <button class="btn btn-warning col-xl-12" (click)="openAlertDescriptionWarning()">
                 Warning
               </button>
             </div>
 
             <div class="col-xl-6">
-              <button class="btn btn-primary col-xl-12" (click)="openAlertDescriptionInfo()">
+              <button class="btn btn-info col-xl-12" (click)="openAlertDescriptionInfo()">
                 Info
               </button>
             </div>
