--- a/src/app/pages/@trello/mind-map/mind-map.component.html
+++ b/src/app/pages/@trello/mind-map/mind-map.component.html
@@ -62,7 +62,7 @@
           </card-title>
 
           <card-tools>
-            <button class="btn" (click)="fullscreen()">
+            <button class="btn btn-primary btn-sm" (click)="fullscreen()">
               <i class="fas fa-expand-arrows-alt"></i>
               Fullscreen
             </button>
