--- a/src/app/pages/@trello/shared/trello-card/trello-card.component.html
+++ b/src/app/pages/@trello/shared/trello-card/trello-card.component.html
@@ -8,7 +8,7 @@
       <card-tools>
         <ng-content select=".header"></ng-content>
 
-        <button class="btn" (click)="trelloViewer.syncAllProjects()">
+        <button class="btn btn-primary btn-sm" (click)="trelloViewer.syncAllProjects()">
           <i class="fas fa-sync"></i>
           Sync Project
         </button>
