--- a/src/app/@theme/components/form/dropdown-checkbox/dropdown-checkbox.component.scss
+++ b/src/app/@theme/components/form/dropdown-checkbox/dropdown-checkbox.component.scss
@@ -1,61 +1,9 @@
 @import "~src/app/@theme/assets/scss/theme-colour.scss";
 
-.dropdown-menu {
-  li {
-    display: block;
+.dropdown-menu li {
+  cursor: pointer;
 
-    padding: 6px 6px 6px 40px;
-
-    cursor: pointer;
-
-    input[type="checkbox"] {
-      position: absolute;
-
-      opacity: 0;
-    }
-
-    input[type="checkbox"] + span:before,
-    input[type="checkbox"] + span:after {
-      position: absolute;
-      z-index: 1;
-      left: 10px;
-
-      margin-top: 8px;
-
-      content: "";
-    }
-
-    input[type="checkbox"] + span:before {
-      width: 20px;
-      height: 20px;
-
-      border: 2px solid color(theme, backdrop-outline);
-      border-radius: 2px;
-      background-color: transparent;
-    }
-
-    input[type="checkbox"]:checked + span:before {
-      width: 8px;
-      height: 15px;
-      margin: 8px 6px;
-
-      -webkit-transform: rotateZ(37deg);
-      transform: rotateZ(37deg);
-
-      border-top: 3px solid transparent;
-      border-right: 3px solid color(theme, text-white);
-      border-bottom: 3px solid color(theme, text-white);
-      border-left: 3px solid transparent;
-    }
-
-    input[type="checkbox"]:checked + span:after {
-      z-index: 0;
-
-      width: 20px;
-      height: 20px;
-
-      border: 3px solid color(theme, primary-dark);
-      background-color: color(theme, primary-dark);
-    }
+  .form-check-input {
+    margin: 9px 5px 0 0;
   }
 }
