--- a/src/app/pages/@theme/cards/cards.component.html
+++ b/src/app/pages/@theme/cards/cards.component.html
@@ -11,11 +11,11 @@
           </card-title>
 
           <card-tools>
-            <button class="btn">
+            <button class="btn btn-primary btn-sm">
               Button 1
             </button>
 
-            <button class="btn">
+            <button class="btn btn-primary btn-sm">
               Button 2
             </button>
           </card-tools>
@@ -49,11 +49,11 @@
           </card-title>
 
           <card-tools>
-            <button class="btn">
+            <button class="btn btn-primary">
               Button 1
             </button>
 
-            <button class="btn">
+            <button class="btn btn-primary">
               Button 2
             </button>
           </card-tools>
