--- a/src/app/@theme/components/card-countdown/card-countdown.component.html
+++ b/src/app/@theme/components/card-countdown/card-countdown.component.html
@@ -1,4 +1,4 @@
 <card class="card-countdown">
-  <h1> {{count}} </h1>
-  <h6> {{description}} </h6>
+  <span class="count"> {{count}} </span>
+  <span class="description"> {{description}} </span>
 </card>
