--- a/src/app/@theme/assets/scss/theme-dropdown.scss
+++ b/src/app/@theme/assets/scss/theme-dropdown.scss
@@ -1,9 +1,11 @@
 .dropdown-menu {
+  padding: 6px 0;
+
   border-radius: 5px;
 }
 
 .dropdown-item {
-  font-size: 14px;
+  font-size: 13px;
 
   padding: 10px 16px;
 
