--- a/src/app/@theme/assets/scss/theme.scss
+++ b/src/app/@theme/assets/scss/theme.scss
@@ -11,6 +11,7 @@ Convention for CSS ordering is done using https://csscomb.herokuapp.com/online
 @import "./theme-button.scss";
 @import "./theme-alert.scss";
 @import "./theme-dropdown.scss";
+@import "./theme-tab.scss";
 @import "./theme-table.scss";
 @import "./theme-typography.scss";
 @import "./theme-progress-bar.scss";
