Update and remove packages

--- a/src/app/pages/@theme/tables/tables.component.html
+++ b/src/app/pages/@theme/tables/tables.component.html
@@ -226,7 +226,7 @@
         </card-header>
 
         <card-body>
-          <div class="table-responsive-xl" data-simplebar data-simplebar-auto-hide="false">
+          <div class="table-responsive">
             <table class="table">
               <thead>
                 <tr>
