--- a/src/app/shared/components/left-navigation/left-navigation.component.html
+++ b/src/app/shared/components/left-navigation/left-navigation.component.html
@@ -1,5 +1,5 @@
 <div class="leftNavigation">
-  <nav data-simplebar data-simplebar-auto-hide="false">
+  <nav>
     <div class="container-fluid">
       <ul class="nav nav-primary">
         <ng-container *ngFor="let menuItem of menu.items; let i = index">
