--- a/src/app/@theme/layouts/dashboard-layout/dashboard-layout.component.scss
+++ b/src/app/@theme/layouts/dashboard-layout/dashboard-layout.component.scss
@@ -12,6 +12,21 @@
   }
 }
 
+::ng-deep {
+  &::-webkit-scrollbar {
+    width: 9px;
+    height: 9px;
+
+    -webkit-appearance: none;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+    background: #808080;
+    box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
+  }
+}
+
 .fullContent {
   width: calc(100% - 60px);
 }
