--- a/src/app/pages/@trello/query/query.component.html
+++ b/src/app/pages/@trello/query/query.component.html
@@ -40,7 +40,7 @@
           <div class="row">
             <div class="col-xl-12">
               <ng-container *ngIf="noColumnsPresent(); else noColumns">
-                <div class="table-responsive-xl" data-simplebar data-simplebar-auto-hide="false">
+                <div class="table-responsive">
                   <table class="table">
                     <thead>
                       <tr>
