Update node packages and replace icons package

--- a/src/app/@theme/components/modal/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/@theme/components/modal/confirmation-modal/confirmation-modal.component.html
@@ -6,11 +6,11 @@
 
     <div class="modal-controls">
       <button type="button" class="btn btn-success" (click)="confirmAction()" data-bs-dismiss="modal">
-        <i class="fas fa-check"></i> Confirm
+        <i class="bi bi-check2"></i> Confirm
       </button>
 
       <button type="button" class="btn btn-danger" (click)="declineAction()" data-bs-dismiss="modal">
-        <i class="fas fa-times"></i> Cancel
+        <i class="bi bi-x"></i> Cancel
       </button>
     </div>
   </modal-body>
