--- a/src/app/@theme/layouts/sidebar/sidebar.component.scss
+++ b/src/app/@theme/layouts/sidebar/sidebar.component.scss
@@ -62,6 +62,8 @@
       }
 
       button[aria-expanded="true"] .dropdownArrow {
+        margin-top: -10px;
+
         transform: rotate(90deg);
       }
 
