--- a/src/app/pages/@theme/dropdowns/dropdowns.component.html
+++ b/src/app/pages/@theme/dropdowns/dropdowns.component.html
@@ -71,7 +71,7 @@
           <div class="col-md-12">
             <div class="btn-group">
               <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown">
-                <i class="fas fa-ellipsis-v"></i>
+                <i class="bi bi-three-dots-vertical"></i>
               </button>
 
               <ul class="dropdown-menu">
@@ -85,7 +85,7 @@
 
             <div class="btn-group">
               <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown">
-                <i class="fas fa-ellipsis-h"></i>
+                <i class="bi bi-three-dots"></i>
               </button>
 
               <ul class="dropdown-menu">
