--- a/src/app/pages/@theme/form/form.component.html
+++ b/src/app/pages/@theme/form/form.component.html
@@ -154,7 +154,7 @@
               <div class="input-group">
                 <span class="input-group-text"> $ </span>
                 <input type="text" class="form-control" placeholder="0.00" />
-                <span class="input-group-text"><i class="fa-solid fa-registered"></i></span>
+                <span class="input-group-text"><i class="bi bi-r-circle-fill"></i></span>
               </div>
             </div>
 
@@ -163,7 +163,7 @@
             <div class="form-group">
               <label> Left Icon Input </label>
               <div class="input-group input-group-icon-left">
-                <span class="input-group-text"><i class="fa-solid fa-magnifying-glass"></i></span>
+                <span class="input-group-text"><i class="bi bi-search"></i></span>
                 <input type="text" class="form-control" placeholder="Search..." />
               </div>
             </div>
@@ -172,7 +172,7 @@
               <label>Right Icon Input</label>
               <div class="input-group input-group-icon-right">
                 <input type="text" class="form-control" placeholder="Search..." />
-                <span class="input-group-text"><i class="fa-solid fa-magnifying-glass"></i></span>
+                <span class="input-group-text"><i class="bi bi-search"></i></span>
               </div>
             </div>
           </form>
