--- a/src/app/@theme/assets/scss/variables.scss
+++ b/src/app/@theme/assets/scss/variables.scss
@@ -64,7 +64,7 @@
   --space-m: calc(var(--space) * 2);
   --space-l: calc(var(--space) * 3);
   --space-xl: calc(var(--space) * 4);
-  --icon-size: var(--space);
+  --icon-size: var(--space-s);
 }
 
 /* PROPERTY */
