--- a/src/app/@theme/layouts/navigation/navigation.component.html
+++ b/src/app/@theme/layouts/navigation/navigation.component.html
@@ -7,20 +7,20 @@
     <div class="navbar-collapse">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" (click)="onToggleSidebar()"> <i class="fas fa-bars"></i> </a>
+          <a class="nav-link" (click)="onToggleSidebar()"> <i class="bi bi-list"></i> </a>
         </li>
       </ul>
 
       <ul class="navbar-nav ms-auto">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
-            <i class="fas fa-cog"></i>
+            <i class="bi bi-gear-fill"></i>
           </a>
 
           <ul class="dropdown-menu">
             <li>
               <a class="dropdown-item" (click)="downloadData()" href="#">
-                <i class="fas fa-download"></i>
+                <i class="bi bi-download"></i>
                 Download Data
               </a>
             </li>
@@ -28,14 +28,14 @@
             <input type="file" accept=".json" hidden #loadData (change)="importData($event)">
             <li>
               <a class="dropdown-item" (click)="loadData.click()" href="#">
-                <i class="fas fa-upload"></i>
+                <i class="bi bi-upload"></i>
                 Import Data
               </a>
             </li>
 
             <li>
               <a class="dropdown-item" (click)="clearData()" href="#">
-                <i class="fa-solid fa-trash"></i>
+                <i class="bi bi-trash-fill"></i>
                 Clear Data
               </a>
             </li>
