--- a/src/app/@theme/layouts/page-footer/page-footer.component.html
+++ b/src/app/@theme/layouts/page-footer/page-footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
   <div class="container-fluid text-center align-items-center">
-    <p> {{currentYear}} <i class="far fa-copyright"></i> Dashboard System. All Rights Reserved </p>
+    <p> {{currentYear}} <i class="bi bi-c-circle"></i> Dashboard System. All Rights Reserved </p>
   </div>
 </footer>
