--- a/src/app/pages/@theme/accordions/accordions.component.html
+++ b/src/app/pages/@theme/accordions/accordions.component.html
@@ -15,7 +15,7 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#basOne">
-                    <i class="fas fa-layer-group"></i>
+                    <i class="bi bi-stack"></i>
                     Section #1
                   </button>
                 </h2>
@@ -29,7 +29,7 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#basTwo">
-                    <i class="fas fa-file"></i>
+                    <i class="bi bi-file-earmark-fill"></i>
                     Section #2
                   </button>
                 </h2>
@@ -43,7 +43,7 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#basThree">
-                    <i class="fas fa-bell"></i>
+                    <i class="bi bi-bell-fill"></i>
                     Section #3
                   </button>
                 </h2>
@@ -71,7 +71,7 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#lasOne">
-                    <i class="fas fa-layer-group"></i>
+                    <i class="bi bi-stack"></i>
                     Section #1
                   </button>
                 </h2>
@@ -85,7 +85,7 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#lasTwo">
-                    <i class="fas fa-file"></i>
+                    <i class="bi bi-file-earmark-fill"></i>
                     Section #2
                   </button>
                 </h2>
@@ -99,7 +99,7 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#lasThree">
-                    <i class="fas fa-bell"></i>
+                    <i class="bi bi-bell-fill"></i>
                     Section #3
                   </button>
                 </h2>
@@ -127,7 +127,7 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#sasOne">
-                    <i class="fas fa-layer-group"></i>
+                    <i class="bi bi-stack"></i>
                     Section #1
                   </button>
                 </h2>
@@ -141,7 +141,7 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sasTwo">
-                    <i class="fas fa-file"></i>
+                    <i class="bi bi-file-earmark-fill"></i>
                     Section #2
                   </button>
                 </h2>
@@ -155,7 +155,7 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sasThree">
-                    <i class="fas fa-bell"></i>
+                    <i class="bi bi-bell-fill"></i>
                     Section #3
                   </button>
                 </h2>
