--- a/src/app/pages/@theme/button-group/button-group.component.html
+++ b/src/app/pages/@theme/button-group/button-group.component.html
@@ -64,29 +64,29 @@
 
           <div class="col-md-12">
             <div class="btn-group btn-group-icons" role="group">
-              <button type="button" class="btn btn-primary"><i class="fas fa-file-alt"></i></button>
-              <button type="button" class="btn btn-primary"><i class="fas fa-save"></i></button>
-              <button type="button" class="btn btn-primary"><i class="fas fa-bold"></i></button>
-              <button type="button" class="btn btn-primary"><i class="fas fa-italic"></i></button>
-              <button type="button" class="btn btn-primary"><i class="fas fa-strikethrough"></i></button>
+              <button type="button" class="btn btn-primary"><i class="bi bi-file-earmark-text-fill"></i></button>
+              <button type="button" class="btn btn-primary"><i class="bi bi-save-fill"></i></button>
+              <button type="button" class="btn btn-primary"><i class="bi bi-type-bold"></i></button>
+              <button type="button" class="btn btn-primary"><i class="bi bi-type-italic"></i></button>
+              <button type="button" class="btn btn-primary"><i class="bi bi-type-strikethrough"></i></button>
             </div>
 
             <div class="btn-group btn-group-icons" role="group">
-              <button type="button" class="btn btn-outline-primary"><i class="fas fa-file-alt"></i></button>
-              <button type="button" class="btn btn-outline-primary"><i class="fas fa-save"></i></button>
-              <button type="button" class="btn btn-outline-primary"><i class="fas fa-bold"></i></button>
-              <button type="button" class="btn btn-outline-primary"><i class="fas fa-italic"></i></button>
-              <button type="button" class="btn btn-outline-primary"><i class="fas fa-strikethrough"></i></button>
+              <button type="button" class="btn btn-outline-primary"><i class="bi bi-file-earmark-text-fill"></i></button>
+              <button type="button" class="btn btn-outline-primary"><i class="bi bi-save-fill"></i></button>
+              <button type="button" class="btn btn-outline-primary"><i class="bi bi-type-bold"></i></button>
+              <button type="button" class="btn btn-outline-primary"><i class="bi bi-type-italic"></i></button>
+              <button type="button" class="btn btn-outline-primary"><i class="bi bi-type-strikethrough"></i></button>
             </div>
           </div>
 
           <div class="col-md-12">
             <ul class="pagination">
-              <li class="page-item disabled"><a class="page-link" href="#"><i class="fa-solid fa-angle-left"></i></a></li>
+              <li class="page-item disabled"><a class="page-link" href="#"><i class="bi bi-chevron-left"></i></a></li>
               <li class="page-item active"><a class="page-link" href="#">1</a></li>
               <li class="page-item"><a class="page-link" href="#">2</a></li>
               <li class="page-item"><a class="page-link" href="#">3</a></li>
-              <li class="page-item"><a class="page-link" href="#"><i class="fa-solid fa-angle-right"></i></a></li>
+              <li class="page-item"><a class="page-link" href="#"><i class="bi bi-chevron-right"></i></a></li>
             </ul>
           </div>
         </div>
