--- a/src/app/pages/@theme/buttons/buttons.component.html
+++ b/src/app/pages/@theme/buttons/buttons.component.html
@@ -111,37 +111,37 @@
 
         <div class="card-body">
           <div class="col-xl-12 mb-2">
-            <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-home"></i> Primary</button>
-            <button type="button" class="btn btn-success btn-sm"><i class="fas fa-chart-pie"></i> Success</button>
-            <button type="button" class="btn btn-danger btn-sm"><i class="fas fa-radiation-alt"></i> Danger</button>
+            <button type="button" class="btn btn-primary btn-sm"><i class="bi bi-house-fill"></i> Primary</button>
+            <button type="button" class="btn btn-success btn-sm"><i class="bi bi-pie-chart-fill"></i> Success</button>
+            <button type="button" class="btn btn-danger btn-sm"><i class="bi bi-radioactive"></i> Danger</button>
 
-            <button type="button" class="btn btn-primary"><i class="fas fa-home"></i> Primary</button>
-            <button type="button" class="btn btn-success"><i class="fas fa-chart-pie"></i> Success</button>
-            <button type="button" class="btn btn-danger"><i class="fas fa-radiation-alt"></i> Danger</button>
+            <button type="button" class="btn btn-primary"><i class="bi bi-house-fill"></i> Primary</button>
+            <button type="button" class="btn btn-success"><i class="bi bi-pie-chart-fill"></i> Success</button>
+            <button type="button" class="btn btn-danger"><i class="bi bi-radioactive"></i> Danger</button>
           </div>
 
           <div class="col-xl-12 mb-2">
-            <button type="button" class="btn btn-light-primary"><i class="fas fa-home"></i> Primary</button>
-            <button type="button" class="btn btn-light-success"><i class="fas fa-chart-pie"></i> Success</button>
-            <button type="button" class="btn btn-light-danger"><i class="fas fa-radiation-alt"></i> Danger</button>
+            <button type="button" class="btn btn-light-primary"><i class="bi bi-house-fill"></i> Primary</button>
+            <button type="button" class="btn btn-light-success"><i class="bi bi-pie-chart-fill"></i> Success</button>
+            <button type="button" class="btn btn-light-danger"><i class="bi bi-radioactive"></i> Danger</button>
 
-            <button type="button" class="btn btn-outline-primary"><i class="fas fa-home"></i> Primary</button>
-            <button type="button" class="btn btn-outline-success"><i class="fas fa-chart-pie"></i> Success</button>
-            <button type="button" class="btn btn-outline-danger"><i class="fas fa-radiation-alt"></i> Danger</button>
+            <button type="button" class="btn btn-outline-primary"><i class="bi bi-house-fill"></i> Primary</button>
+            <button type="button" class="btn btn-outline-success"><i class="bi bi-pie-chart-fill"></i> Success</button>
+            <button type="button" class="btn btn-outline-danger"><i class="bi bi-radioactive"></i> Danger</button>
           </div>
 
           <div class="col-xl-12 mb-2">
-            <button type="button" class="btn btn-primary btn-icon"><i class="fas fa-home"></i></button>
-            <button type="button" class="btn btn-success btn-icon"><i class="fas fa-chart-pie"></i></button>
-            <button type="button" class="btn btn-danger btn-icon"><i class="fas fa-radiation-alt"></i></button>
+            <button type="button" class="btn btn-primary btn-icon"><i class="bi bi-house-fill"></i></button>
+            <button type="button" class="btn btn-success btn-icon"><i class="bi bi-pie-chart-fill"></i></button>
+            <button type="button" class="btn btn-danger btn-icon"><i class="bi bi-radioactive"></i></button>
 
-            <button type="button" class="btn btn-light-primary btn-icon"><i class="fas fa-home"></i></button>
-            <button type="button" class="btn btn-light-success btn-icon"><i class="fas fa-chart-pie"></i></button>
-            <button type="button" class="btn btn-light-danger btn-icon"><i class="fas fa-radiation-alt"></i></button>
+            <button type="button" class="btn btn-light-primary btn-icon"><i class="bi bi-house-fill"></i></button>
+            <button type="button" class="btn btn-light-success btn-icon"><i class="bi bi-pie-chart-fill"></i></button>
+            <button type="button" class="btn btn-light-danger btn-icon"><i class="bi bi-radioactive"></i></button>
 
-            <button type="button" class="btn btn-outline-primary btn-icon"><i class="fas fa-home"></i></button>
-            <button type="button" class="btn btn-outline-success btn-icon"><i class="fas fa-chart-pie"></i></button>
-            <button type="button" class="btn btn-outline-danger btn-icon"><i class="fas fa-radiation-alt"></i></button>
+            <button type="button" class="btn btn-outline-primary btn-icon"><i class="bi bi-house-fill"></i></button>
+            <button type="button" class="btn btn-outline-success btn-icon"><i class="bi bi-pie-chart-fill"></i></button>
+            <button type="button" class="btn btn-outline-danger btn-icon"><i class="bi bi-radioactive"></i></button>
           </div>
         </div>
       </div>
