--- a/src/app/pages/@theme/tabs/tabs.component.html
+++ b/src/app/pages/@theme/tabs/tabs.component.html
@@ -12,14 +12,14 @@
         <div class="card-body">
           <ul class="nav">
             <li class="nav-item">
-              <a class="nav-link active" href="#"><i class="fas fa-comments"></i> Active</a>
+              <a class="nav-link active" href="#"><i class="bi bi-chat-left-text-fill"></i> Active</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="fas fa-layer-group"></i> Link</a>
+              <a class="nav-link" href="#"><i class="bi bi-stack"></i> Link</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button">
-                <i class="fas fa-rocket"></i> Dropdown
+                <i class="bi bi-rocket-takeoff-fill"></i> Dropdown
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Action</a></li>
@@ -30,7 +30,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"><i class="fas fa-cogs"></i> Disabled</a>
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"><i class="bi bi-gear-fill"></i> Disabled</a>
             </li>
           </ul>
         </div>
@@ -47,14 +47,14 @@
           <div class="row">
             <ul class="nav justify-content-begin">
               <li class="nav-item">
-                <a class="nav-link active" href="#"><i class="fas fa-comments"></i> Active</a>
+                <a class="nav-link active" href="#"><i class="bi bi-chat-left-text-fill"></i> Active</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fas fa-layer-group"></i> Link</a>
+                <a class="nav-link" href="#"><i class="bi bi-stack"></i> Link</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button">
-                  <i class="fas fa-rocket"></i> Dropdown
+                  <i class="bi bi-rocket-takeoff-fill"></i> Dropdown
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Action</a></li>
@@ -65,7 +65,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"><i class="fas fa-cogs"></i> Disabled</a>
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"><i class="bi bi-gear-fill"></i> Disabled</a>
               </li>
             </ul>
           </div>
@@ -73,14 +73,14 @@
           <div class="row">
             <ul class="nav justify-content-center">
               <li class="nav-item">
-                <a class="nav-link active" href="#"><i class="fas fa-comments"></i> Active</a>
+                <a class="nav-link active" href="#"><i class="bi bi-chat-left-text-fill"></i> Active</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fas fa-layer-group"></i> Link</a>
+                <a class="nav-link" href="#"><i class="bi bi-stack"></i> Link</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button">
-                  <i class="fas fa-rocket"></i> Dropdown
+                  <i class="bi bi-rocket-takeoff-fill"></i> Dropdown
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Action</a></li>
@@ -91,7 +91,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"><i class="fas fa-cogs"></i> Disabled</a>
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"><i class="bi bi-gear-fill"></i> Disabled</a>
               </li>
             </ul>
           </div>
@@ -99,14 +99,14 @@
           <div class="row">
             <ul class="nav justify-content-end">
               <li class="nav-item">
-                <a class="nav-link active" href="#"><i class="fas fa-comments"></i> Active</a>
+                <a class="nav-link active" href="#"><i class="bi bi-chat-left-text-fill"></i> Active</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fas fa-layer-group"></i> Link</a>
+                <a class="nav-link" href="#"><i class="bi bi-stack"></i> Link</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button">
-                  <i class="fas fa-rocket"></i> Dropdown
+                  <i class="bi bi-rocket-takeoff-fill"></i> Dropdown
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Action</a></li>
@@ -117,7 +117,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"><i class="fas fa-cogs"></i> Disabled</a>
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"><i class="bi bi-gear-fill"></i> Disabled</a>
               </li>
             </ul>
           </div>
@@ -134,13 +134,13 @@
         <div class="card-body">
           <ul class="nav nav-tabs">
             <li class="nav-item">
-              <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#tabs-01"><i class="fas fa-comments"></i> Home</button>
+              <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#tabs-01"><i class="bi bi-chat-left-text-fill"></i> Home</button>
             </li>
             <li class="nav-item">
-              <button class="nav-link" data-bs-toggle="tab" data-bs-target="#tabs-02"><i class="fas fa-layer-group"></i> Profile</button>
+              <button class="nav-link" data-bs-toggle="tab" data-bs-target="#tabs-02"><i class="bi bi-stack"></i> Profile</button>
             </li>
             <li class="nav-item">
-              <button class="nav-link" data-bs-toggle="tab" data-bs-target="#tabs-03"><i class="fas fa-rocket"></i> Contact</button>
+              <button class="nav-link" data-bs-toggle="tab" data-bs-target="#tabs-03"><i class="bi bi-rocket-takeoff-fill"></i> Contact</button>
             </li>
           </ul>
 
@@ -169,13 +169,13 @@
           <div class="row">
             <ul class="nav nav-pills">
               <li class="nav-item">
-                <button class="nav-link active" href="#" data-bs-toggle="tab" data-bs-target="#pills-01"><i class="fas fa-comments"></i> Home</button>
+                <button class="nav-link active" href="#" data-bs-toggle="tab" data-bs-target="#pills-01"><i class="bi bi-chat-left-text-fill"></i> Home</button>
               </li>
               <li class="nav-item">
-                <button class="nav-link" href="#" data-bs-toggle="tab" data-bs-target="#pills-02"><i class="fas fa-layer-group"></i> Profile</button>
+                <button class="nav-link" href="#" data-bs-toggle="tab" data-bs-target="#pills-02"><i class="bi bi-stack"></i> Profile</button>
               </li>
               <li class="nav-item">
-                <button class="nav-link" href="#" data-bs-toggle="tab" data-bs-target="#pills-03"><i class="fas fa-rocket"></i> Contact</button>
+                <button class="nav-link" href="#" data-bs-toggle="tab" data-bs-target="#pills-03"><i class="bi bi-rocket-takeoff-fill"></i> Contact</button>
               </li>
             </ul>
 
@@ -195,13 +195,13 @@
           <div class="row">
             <ul class="nav nav-success nav-pills">
               <li class="nav-item">
-                <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#pills-04"><i class="fas fa-comments"></i> Home</button>
+                <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#pills-04"><i class="bi bi-chat-left-text-fill"></i> Home</button>
               </li>
               <li class="nav-item">
-                <button class="nav-link" data-bs-toggle="tab" data-bs-target="#pills-05"><i class="fas fa-layer-group"></i> Profile</button>
+                <button class="nav-link" data-bs-toggle="tab" data-bs-target="#pills-05"><i class="bi bi-stack"></i> Profile</button>
               </li>
               <li class="nav-item">
-                <button class="nav-link" data-bs-toggle="tab" data-bs-target="#pills-06"><i class="fas fa-rocket"></i> Contact</button>
+                <button class="nav-link" data-bs-toggle="tab" data-bs-target="#pills-06"><i class="bi bi-rocket-takeoff-fill"></i> Contact</button>
               </li>
             </ul>
 
@@ -222,13 +222,13 @@
             <div class="d-flex align-items-start">
               <div class="nav flex-column nav-pills me-3" id="v-pills-tab">
                 <button class="nav-link active" data-bs-toggle="pill" data-bs-target="#pills-07">
-                  <i class="fas fa-comments"></i> Home
+                  <i class="bi bi-chat-left-text-fill"></i> Home
                 </button>
                 <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-08">
-                  <i class="fas fa-layer-group"></i> Profile
+                  <i class="bi bi-stack"></i> Profile
                 </button>
                 <button class="nav-link" data-bs-toggle="pill" data-bs-target="#pills-09">
-                  <i class="fas fa-rocket"></i> Contact
+                  <i class="bi bi-rocket-takeoff-fill"></i> Contact
                 </button>
               </div>
 
